--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -232,8 +232,9 @@
     </style>
 
     <style name="loginButton" parent="baseButton">
-        <item name="android:background">@drawable/main_button_login_background</item>
-        <item name="android:layout_marginBottom">50dp</item>
+        <item name="android:backgroundTint">@color/darkBlue</item>
+        <item name="android:width">250dp</item>
+        <item name="cornerRadius">18dp</item>
     </style>
 
     <style name="mainButton" parent="baseButton">
