--- a/app/src/main/res/layout/found_order_element.xml
+++ b/app/src/main/res/layout/found_order_element.xml
@@ -23,6 +23,6 @@
         android:layout_weight="1"
         android:gravity="end"
         android:textSize="14sp"
-        android:textColor="@color/panelColor"
+        android:textColor="@color/mainBlue"
         android:fontFamily="@font/roboto_bold"/>
 </LinearLayout>
