--- a/app/src/main/res/drawable/category_button.xml
+++ b/app/src/main/res/drawable/category_button.xml
@@ -4,7 +4,7 @@
 
     <item>
         <shape>
-            <solid android:color="@color/colorCategoryButton"/>
+            <solid android:color="@color/darkBlue"/>
             <stroke
                 android:width="3dp"
                 android:color="@color/transparentGrey" />
