--- a/app/src/main/res/drawable/tags_button.xml
+++ b/app/src/main/res/drawable/tags_button.xml
@@ -5,7 +5,7 @@
     <item>
         <shape>
             <solid
-                android:color="@color/panelColor"/>
+                android:color="@color/mainBlue"/>
             <stroke
                 android:width="3dp"
                 android:color="@color/transparentGrey" />
