--- a/app/src/main/res/layout/bottom_panel.xml
+++ b/app/src/main/res/layout/bottom_panel.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="46dp"
-    android:background="@color/panelColor"
+    android:background="@color/mainBlue"
     android:orientation="horizontal">
 
     <TextView
@@ -12,7 +12,7 @@
         android:layout_height="match_parent"
         android:layout_gravity="center"
         android:layout_weight="1"
-        android:background="@color/panelColor"
+        android:background="@color/mainBlue"
         android:gravity="center"
         android:text="@string/profile_ico" />
 
@@ -23,7 +23,7 @@
         android:layout_height="match_parent"
         android:layout_gravity="center"
         android:layout_weight="1"
-        android:background="@color/panelColor"
+        android:background="@color/mainBlue"
         android:gravity="center"
         android:text="@string/main_screen_ico" />
 
@@ -34,7 +34,7 @@
         android:layout_height="match_parent"
         android:layout_gravity="center"
         android:layout_weight="1"
-        android:background="@color/panelColor"
+        android:background="@color/mainBlue"
         android:gravity="center"
         android:text="@string/chat_ico" />
 
