--- a/app/src/main/res/layout/top_panel.xml
+++ b/app/src/main/res/layout/top_panel.xml
@@ -4,7 +4,7 @@
     android:id="@+id/topPanelMainLayout"
     android:layout_width="match_parent"
     android:layout_height="100dp"
-    android:background="@color/panelColor"
+    android:background="@color/mainBlue"
     android:orientation="horizontal">
 
     <TextView
