--- a/app/src/main/res/layout/top_panel_k.xml
+++ b/app/src/main/res/layout/top_panel_k.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/panelColor"
+    android:background="@color/mainBlue"
     android:orientation="horizontal">
 
     <TextView
