--- a/app/src/main/res/layout/messages.xml
+++ b/app/src/main/res/layout/messages.xml
@@ -42,7 +42,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:backgroundTint="@color/panelColor"
+            android:backgroundTint="@color/mainBlue"
             android:inputType="textMultiLine|textCapSentences"
             style="@style/loginPackageInput"
             android:hint="Сообщения"/>
