--- a/app/src/main/res/layout/activity_authorization.xml
+++ b/app/src/main/res/layout/activity_authorization.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    style="@style/logInPages"
+    style="@style/logInPage"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -33,13 +33,13 @@
 
             <Spinner
                 android:id="@+id/codeAuthorizationSpinner"
-                style="@style/loginPackageSpinner"
+                style="@style/loginSpinner"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
 
             <EditText
                 android:id="@+id/phoneAuthorizationInput"
-                style="@style/loginPackageInput"
+                style="@style/loginInput"
                 android:hint="@string/phoneRegistration"
                 android:inputType="phone" />
         </LinearLayout>
