--- a/app/src/main/res/drawable/tags_button.xml
+++ b/app/src/main/res/drawable/tags_button.xml
@@ -8,7 +8,7 @@
                 android:color="@color/mainBlue"/>
             <stroke
                 android:width="3dp"
-                android:color="@color/transparentGrey" />
+                android:color="@color/grey40" />
             <corners
                 android:radius="5dp" />
             <padding
