--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,9 +2,9 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.MaterialComponents.Light.NoActionBar">
         <!-- Reg pages -->
-        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimary">@color/mainBlue</item>
         <item name="colorPrimaryDark">@color/darkBlue</item>
-        <item name="colorAccent">@color/lightText</item>
+        <item name="colorAccent">@color/white50</item>
         <item name="android:textColorHint">@color/black</item>
     </style>
 
@@ -20,16 +20,13 @@
         <item name="windowNoTitle">true</item>
     </style>
 
-    <!-- Style for logIn pages -->
-    <style name="logInPages">
-        <item name="windowActionBar">false</item>
+    <style name="logInPage">
         <item name="android:background">@color/mainBlue</item>
-        <item name="windowNoTitle">true</item>
     </style>
 
     <!-- Style for extra text -->
     <style name="extraText">
-        <item name="android:textColor">@color/lightText</item>
+        <item name="android:textColor">@color/white50</item>
         <item name="android:textSize">14sp</item>
         <item name="fontFamily">@font/roboto_bold</item>
     </style>
@@ -48,11 +45,11 @@
     </style>
 
     <style name="lightText">
-        <item name="android:backgroundTint">@color/lightText</item>
+        <item name="android:backgroundTint">@color/white50</item>
         <item name="android:inputType">textPersonName|textCapWords</item>
         <item name="android:textColor">@color/white</item>
         <item name="android:ems">10</item>
-        <item name="android:textColorHint">@color/lightText</item>
+        <item name="android:textColorHint">@color/white50</item>
         <item name="android:textStyle">bold</item>
     </style>
 
@@ -96,7 +93,7 @@
     <style name="timeText" parent="textOnPages">
         <item name="android:textSize">12sp</item>
         <item name="android:padding">0dp</item>
-        <item name="android:textColor">@color/grey50</item>
+        <item name="android:textColor">@color/grey</item>
     </style>
 
     <style name="defaultText" parent="textOnPages">
@@ -111,7 +108,7 @@
         <item name="android:textCursorDrawable">@color/black</item>
         <item name="android:inputType">textPersonName|textCapSentences</item>
         <item name="android:backgroundTint">@android:color/transparent</item>
-        <item name="android:textColorHint">@color/hintColor</item>
+        <item name="android:textColorHint">@color/grey</item>
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">match_parent</item>
     </style>
@@ -207,21 +204,28 @@
         <item name="android:orientation">vertical</item>
     </style>
 
-    <style name="loginPackageInput">
-        <item name="android:layout_width">wrap_content</item>
+    <style name="loginInput">
+        <item name="android:layout_width">220dp</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:width">200dp</item>
-        <item name="android:textColorHint">@color/lightText</item>
-        <item name="android:backgroundTint">@color/lightText</item>
+        <item name="android:textSize">18sp</item>
         <item name="android:textColor">@color/white</item>
-        <item name="android:textStyle">bold</item>
+        <item name="android:textColorHint">@color/white50</item>
+        <item name="android:backgroundTint">@color/white50</item>
         <item name="android:maxLines">1</item>
     </style>
 
-    <style name="loginPackageSpinner">
-        <item name="android:background">@color/white</item>
-        <item name="android:backgroundTint">@color/mainBlue</item>
-        <item name="android:popupBackground">@color/mainBlue</item>
+    <style name="loginSpinnerElement">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:background">@color/mainBlue</item>
+        <item name="android:maxLines">1</item>
+    </style>
+
+    <style name="loginSpinner">
+        <item name="android:layout_width">220dp</item>
+        <item name="android:layout_height">wrap_content</item>
     </style>
 
     <!-- Style for main buttons -->
@@ -233,7 +237,14 @@
 
     <style name="loginButton" parent="baseButton">
         <item name="android:backgroundTint">@color/darkBlue</item>
-        <item name="android:width">250dp</item>
+        <item name="android:width">220dp</item>
+        <item name="cornerRadius">18dp</item>
+    </style>
+
+    <style name="smallButton" parent="baseButton">
+        <item name="android:layout_marginStart">2dp</item>
+        <item name="android:layout_marginEnd">2dp</item>
+        <item name="android:backgroundTint">@color/darkBlue</item>
         <item name="cornerRadius">18dp</item>
     </style>
 
@@ -250,14 +261,6 @@
         <item name="android:layout_marginBottom">2dp</item>
         <item name="android:textSize">20sp</item>
         <item name="android:textColorHint">@color/white</item>
-    </style>
-
-    <style name="smallButton" parent="baseButton">
-        <item name="android:layout_marginBottom">16dp</item>
-        <item name="android:layout_marginStart">2dp</item>
-        <item name="android:layout_marginEnd">2dp</item>
-        <item name="android:backgroundTint">@color/darkBlue</item>
-        <item name="cornerRadius">18dp</item>
     </style>
 
     <style name="scheduleButton" parent="Widget.MaterialComponents.Button.UnelevatedButton">
