--- a/app/src/main/res/layout/subscribers.xml
+++ b/app/src/main/res/layout/subscribers.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/backgroundLightBlue"
-    tools:context="com.bunbeauty.ideal.myapplication.cleanArchitecture.mvp.activities.subscriptions.SubscribersActivity">
+    tools:context="com.bunbeauty.ideal.myapplication.cleanArchitecture.mvp.activities.subscriptions.SubscriptionsActivity">
 
     <include layout="@layout/part_top_panel" />
 
